Code clean up, skull fixes, and prefix fix for bw1058